--- a/temperatureconverting.html
+++ b/temperatureconverting.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <form>
-        <h1>Temperature Conversion</h1>
+        <h1>TEMPERATURE CONVERSION</h1><br><br><br><br>
         <input type="number" id="textBox" value="0"><br><br>
         
         <input type="radio" id="toFahrenhiet" name="unit">
-        <label for="toFahrenhiet">Celsius=>Fahrenhiet</label><br>
+        <label for="toFahrenhiet">Celsius  -->  Fahrenhiet</label><br><br><br>
 
         <input type="radio" id="toCelsius" name="unit">
-        <label for="toCelsius">Fahrenhiet=>Celsius</label><br><br>
+        <label for="toCelsius">Fahrenhiet  -->  Celsius</label><br><br><br>
 
-        <button type="button" onclick="convert()">submit</button>
+        <button type="button" onclick="convert()">Submit</button>
 
         <p id="result">Select a unit</p>
 
